# Learn-Django-TDD

./: .gitignore  README.md  devnote.md  manage.py  pyproject.toml  pytest.ini  scratchpad.md
functional_tests/: test_functional_tests.py  tests.py
learn_django_tdd/: asgi.py  settings.py  urls.py  wsgi.py
lists/: models.py  tests.py  views.py
lists/migrations/: 0001_initial.py  0002_item_text.py  0003_list.py  0004_item_list.py
lists/templates/: home.html
tests/: test_functional_tests.py  test_functional_tests_unittest.py
